Fixed inline code on mobile

--- a/src/Resources/css/layouts/_article.scss
+++ b/src/Resources/css/layouts/_article.scss
@@ -69,6 +69,7 @@
             color: $black;
             border-radius: 2px;
             padding: 0px 3px;
+            word-break: break-all;
         }
 
         .highlight {
